# PythonHangman

./: .gitignore  .pylintrc  discord.webm  gui.webm  hangman.py  hangman_cli.py  hangman_discord.py  hangman_gui.py  hangman_test.py  mypy.ini  pyproject.toml  requirements.txt  tasks.py  wordlist.txt
.github/workflows/: python.yml
docs/: README.adoc  README.md
originals/: cli-ascii.cast
